<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/VerticalThemeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.meimportatunegocio.railsquiz.MainActivity">

        <EditText
            android:id="@+id/name_field"
            style="@style/Text"
            android:hint="@string/name" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/header" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_one" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ruby_checkbox"
                style="@style/RubyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruby" />

            <Space
                android:layout_width="10dp"
                android:layout_height="1dp" />

            <CheckBox
                android:id="@+id/rails_checkbox"
                style="@style/RailsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rails" />


        </LinearLayout>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_two" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rubyTwo"
                    style="@style/RubyButton"
                    android:text="Ruby" />


                <Space
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <RadioButton
                    android:id="@+id/railsTwo"
                    style="@style/RailsButton"
                    android:text="Rails" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_three" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rubyThree"
                    style="@style/RubyButton"
                    android:text="Ruby" />


                <Space
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <RadioButton
                    android:id="@+id/railsThree"
                    style="@style/RailsButton"
                    android:text="Rails" />
            </RadioGroup>


        </LinearLayout>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_four" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rubyFour"
                    style="@style/RubyButton"
                    android:text="Ruby" />


                <Space
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <RadioButton
                    android:id="@+id/railsFour"
                    style="@style/RailsButton"
                    android:text="Rails" />
            </RadioGroup>


        </LinearLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                style="@style/SubmitButton"
                android:layout_width="68dp"
                android:layout_height="48dp"
                android:onClick="answersSubmit"
                android:text="@string/submit" />

            <Space
                android:layout_width="10dp"
                android:layout_height="1dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/summary_text_view"
            style="@style/QuestionTextStyle" />
    </LinearLayout>
</ScrollView>